--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>SCDL Calling Assistant</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SCDL Calling Assistant</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       background: #f4f6fb;
       padding: 40px;
+      margin: 0;
     }
 
     .container {
@@ -17,7 +20,28 @@
       background: white;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
+
+    header {
+      background-color: #d80000;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    header img {
+      max-height: 50px;
+    }
+
+    header h1 {
+      font-size: 24px;
+      margin: 0;
+      flex-grow: 1;
+      text-align: left;
     }
 
     h2 {
@@ -36,7 +60,7 @@
 
     button {
       margin-top: 15px;
-      background: #4a5cff;
+      background: #d80000;
       color: white;
       padding: 12px 20px;
       border: none;
@@ -46,7 +70,7 @@
     }
 
     button:hover {
-      background: #3848d6;
+      background: #b00000;
     }
 
     .answer {
@@ -64,10 +88,21 @@
       color: #777;
       text-align: center;
     }
+
+    .footer a {
+      color: #d80000;
+      text-decoration: none;
+    }
   </style>
 </head>
 
 <body>
+
+<header>
+  <img src="https://www.scdl.net/images/logo.png" alt="SCDL Logo">
+  <h1>SCDL Calling Assistant</h1>
+  <a href="https://www.scdl.net" target="_blank">SCDL Website</a>
+</header>
 
 <div class="container">
   <h2>SCDL Calling Assistant</h2>
@@ -80,7 +115,8 @@
   <div class="answer" id="answer"></div>
 
   <div class="footer">
-    Internal tool for SCDL calling team
+    Internal tool for SCDL calling team<br>
+    <p>For more information, visit <a href="https://www.scdl.net" target="_blank">Symbiosis Centre for Distance Learning</a></p>
   </div>
 </div>
 
